[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["steven. <sveshkini@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = {extras = ["all"], version = "^0.0.33"}
python-dotenv = "^0.21.0"
openai = "^0.25.0"
gpt-index = "^0.1.0"
cohere = "^2.9.1"
gradio = "^3.12.0"
slack-sdk = "^3.19.5"
flask = "^2.2.2"
slackeventsapi = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
